# hft-risk-server

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: format.h  logging.h  protocol.h  risk_client.h  risk_service.h  tcp.h
src/: main.cpp  risk_service.cpp  tcp.cpp
tests/: main.cpp
